[package]
name = "rasen"
version = "0.1.0"
authors = ["Skyler Ross <orangesnowfox@gmail.com>"]
edition = "2018"
description = "A quick spinning assembler"
license = "BlueOak-1.0.0"

[dependencies]

[build-dependencies]
cargo-emit = "0.1.1"
serde_json = "1.0.44"
serde_derive = "1.0.104"
serde = "1.0.104"