[package]
name = "rasen-codegen"
version = "0.1.0"
authors = ["Skyler Ross <orangesnowfox@gmail.com>"]
edition = "2018"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.44"
serde_derive = "1.0.104"
serde = "1.0.104"
